# fastapi-example-py

./: README.md  pyproject.toml
api_pedidos/: api.py  esquemas.py  magalu_api.py
tests/: test_api.py
